--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,7 @@
     <div class="menu">
         <div [routerLink]="[ '/admin/discount' ]" routerLinkActive="route-active-admin" class="punkts-menu">Акції</div>
         <div  [routerLink]="[ '/admin/category' ]" routerLinkActive="route-active-admin" class="punkts-menu">Категорії</div>
-        <div class="punkts-menu">Товари</div>
+        <div  [routerLink]="[ '/admin/product' ]" routerLinkActive="route-active-admin" class="punkts-menu">Товари</div>
         <div class="punkts-menu">Замовлення</div>
         <div style="border-right: none;" class="punkts-menu"></div>
     </div>
