--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,5 +1,84 @@
 <div class="container">
+
     <h1 id="name">Продукти</h1>
+    <div class="menu-roli"  *ngIf="isCategoryRoli()">
+        <div class="menu-roli-punkts"  [ngClass]="{'menu-roli-punkts-active': selectedPathPart === null}" (click)="openAll()">
+            Всі
+        </div>
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'filadelfiya'}" (click)="openFiladelfiya()">
+            Роли Філадельфія
+        </div>
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'kaliforniya'}" (click)="openKaliforniya()">
+            Роли Каліфорнія
+        </div>
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'zapechenyj'}" (click) = "openZapechenyj()">
+            Запечені роли
+        </div>
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'firmovi'}" (click) = "openFirmovi()">
+            Фірмові суші
+        </div>
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'maki'}" (click) = "openMaki()">
+            Роли Макі
+        </div>
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'premium'}" (click) = "openPremium()">
+            Преміум Суші
+        </div>
+    </div>
+    <div class="menu" *ngIf="!isCategoryRoli()">
+        <div class="card" *ngFor="let product of userProducts">
+            <img [routerLink]="[ '/product/'+product.category.path, product.id ]" [src]="product.imagePath"
+                class="img-top" [alt]="product.name">
+            <div>
+                <h5 [routerLink]="[ '/product/'+product.category.path, product.id ]" class="card-title">{{
+                    product.name }}</h5>
+                <div class="item-card">
+                    <p *ngIf="product.category.path === 'sousi' || product.category.path === 'drinks' ; else otherPath" class="card-text"></p>
+                    <ng-template #otherPath>
+                        <p class="card-text">{{ product.description }}</p>
+                    </ng-template>
+                    <h4 class="card-weight">{{ product.weight }} г</h4>
+                </div>
+                <div class="bottom-item">
+                    <h4 class="card-price">{{ product.price }} грн</h4>
+                    <div class="manageCount" >
+                        <button type="button" class="btnMinus">-</button>
+                        <input class="countProduct" type="text" value="1" style="width: 40px;">
+                        <button type="button" class="btnAdd">+</button>
+                    </div>
+                    <a class="btnOrder">Замовити</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="menu" *ngIf="isCategoryRoli()">
+        <div style="min-width: 0; min-height: 0px;" *ngFor="let product of userProducts">
+            <div class="card" *ngIf="selectedPathPart === null || product.path.includes(selectedPathPart)">
+                <img [routerLink]="[ '/product/'+product.category.path, product.id ]" [src]="product.imagePath"
+                    class="img-top" [alt]="product.name">
+                <div>
+                    <h5 [routerLink]="[ '/product/'+product.category.path, product.id ]" class="card-title">{{
+                        product.name }}</h5>
+                    <div class="item-card">
+                        <p *ngIf="product.category.path === 'sousi' || product.category.path === 'drinks' ; else otherPath"
+                            class="card-text"></p>
+                        <ng-template #otherPath>
+                            <p class="card-text">{{ product.description }}</p>
+                        </ng-template>
+                        <h4 class="card-weight">{{ product.weight }} г</h4>
+                    </div>
+                    <div class="bottom-item">
+                        <h4 class="card-price">{{ product.price }} грн</h4>
+                        <div class="manageCount">
+                            <button type="button" class="btnMinus">-</button>
+                            <input class="countProduct" type="text" value="1" style="width: 40px;">
+                            <button type="button" class="btnAdd">+</button>
+                        </div>
+                        <a class="btnOrder">Замовити</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="text">
         <h1>Суші роли: по-справжньому великі порції від Monosushi</h1>
         <p>У світі японської кухні є страва, яка закохує з першого шматочка. Це — роли. Якщо ви любите їх так само як і
@@ -81,7 +160,7 @@
                 вчасно. Діє безкоштовна доставка замовлень на суму від 300 грн.</p>
             <div style="display: flex;">
                 <div>
-                    <p  [routerLink]="[ '' ]" id="pLogo"><b>Monosushi</b></p>
+                    <p [routerLink]="[ '' ]" id="pLogo"><b>Monosushi</b></p>
                     <hr id="linepLogo">
                 </div>
                 <p> — роли, які вам точно сподобаються!</p>
