--- a/src/app/pages/product/product.component.scss
+++ b/src/app/pages/product/product.component.scss
@@ -3,7 +3,7 @@
 @import "../../shared/styles/variables";
 
 .container {
-    width: 80%;
+    width: 100%;
     margin: auto;
 
     #name {
@@ -127,4 +127,157 @@
 
         }
     }
+
+    .menu{
+        width: 100%;
+        min-height: 100px;
+        @include flex-row(flex, row, flex-start, center);
+        margin: 100px auto;
+        flex-wrap: wrap;
+        
+        .card {
+            @include box(500px, 600px);
+            @include flex-row(flex, column, space-between, center);
+            border: 4px solid transparent;
+            position: relative;
+
+            &:hover {
+                cursor: pointer;
+
+            }
+
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                z-index: 2;
+                border: 3px solid transparent;
+                width: 0;
+                height: 0;
+                border-radius: 7px;
+            }
+
+            // Додали анімацію для лівого та нижнього бордерів
+            &:hover::after {
+                border-left-color: #b5d8f7;
+                border-bottom-color: #b5d8f7;
+                transition: border-color 0s ease-out 0.12s, width 0.15s ease-out 0.15s, height 0.25s ease-out 0.25s;
+                bottom: 0;
+                right: 0;
+                width: 100%;
+                height: 100%;
+            }
+
+            &:hover::before {
+                top: 0;
+                left: 0;
+                border-top-color: #b5d8f7;
+                border-right-color: #b5d8f7;
+                transition: width 0.1s ease-out, height 0.1s ease-out 0.1s;
+                width: 100%;
+                height: 100%;
+            }
+
+            .img-top {
+                width: 405px;
+                margin: auto;
+                display: block;
+            }
+
+            .card-title {
+                @include box(405px, 60px);
+                @include text(25px, sans-serif, bold);
+                text-align: center;
+                margin: 20px auto 0;
+            }
+
+            .item-card {
+                @include box(405px, 60px);
+                @include flex-row(flex, row, space-between, center);
+                margin: auto;
+                .card-text {
+                    @include box(70%, 60px);
+                    line-height: 35px;
+                    @include text(16px, sans-serif, normal);
+                }
+
+                .card-weight {
+                    @include box(20%, 60px);
+                    line-height: 35px;
+                    @include text(18px, sans-serif, bold);
+                }
+            }
+
+            .bottom-item {
+                @include box(405px, 130px);
+
+                @include flex-row(flex, row, space-between, center);
+                margin: auto;
+                .card-price {
+                    @include box(25%, 60px);
+                    line-height: 35px;
+                    @include text(18px, sans-serif, bold);
+                    line-height: 60px;
+                }
+
+                .manageCount {
+                    @include flex-row(flex, row, center, center);
+                    align-items: center;
+                    border: 1px solid lightgray;
+                    border-radius: 20px;
+                    @include box(30%, 60px);
+                }
+
+                .btnMinus,
+                .btnAdd{
+                    @include box(25%, 60px);
+                    border:none;
+                    @include text(18px, sans-serif, bold);
+                    line-height: 60px;
+                    background-color: transparent;
+                }
+
+                .countProduct{
+                    @include box(25%, 60px);
+                    border:none;
+                    @include text(18px, sans-serif, bold);
+                    line-height: 60px;
+                    background-color: transparent;
+                    text-align: center;
+                }
+
+                .btnOrder{
+                    @include box(30%, 60px);
+                    line-height: 35px;
+                    @include text(18px, sans-serif, bold);
+                    line-height: 60px;
+                    border: none;
+                    background-color: $base-color;
+                    border-radius: 20px;
+                    text-align: center;
+                }
+            }
+        }
+    }
+
+    .menu-roli {
+        @include box(80%, 80px);
+        @include flex-row(flex, row, center, center);
+        margin: 100px auto;
+
+        .menu-roli-punkts {
+            @include box(17%, 100%);
+            @include flex-row(flex, row, center, center);
+            @include text(20px, sans-serif, bold);
+            border: 2px solid lightgray;
+        }
+    }
+
+    .menu-roli-punkts-active{
+        border-top: 5px solid $base-color !important;
+        border-bottom: none !important;
+        border-left: none !important;
+        border-right: none !important;
+    }
+
 }
