--- a/src/app/pages/discount-info/discount-info.component.html
+++ b/src/app/pages/discount-info/discount-info.component.html
@@ -1,1 +1,8 @@
-<p>discount-info works!</p>
+<div class="container">
+    <div class="banner">
+        <p class="discount-name">{{currentDiscount.title}}</p>
+    </div>
+    <ul class="discount-text" [innerHTML]="currentDiscount.description"></ul>
+
+
+</div>
