--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,51 +1,63 @@
 <div class="container">
 
     <h1 id="name">Продукти</h1>
-    <div class="menu-roli"  *ngIf="isCategoryRoli()">
-        <div class="menu-roli-punkts"  [ngClass]="{'menu-roli-punkts-active': selectedPathPart === null}" (click)="openAll()">
+    <div class="menu-roli" *ngIf="isCategoryRoli()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === null}"
+            (click)="openAll()">
             Всі
         </div>
-        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'filadelfiya'}" (click)="openFiladelfiya()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'filadelfiya'}"
+            (click)="openFiladelfiya()">
             Роли Філадельфія
         </div>
-        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'kaliforniya'}" (click)="openKaliforniya()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'kaliforniya'}"
+            (click)="openKaliforniya()">
             Роли Каліфорнія
         </div>
-        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'zapechenyj'}" (click) = "openZapechenyj()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'zapechenyj'}"
+            (click)="openZapechenyj()">
             Запечені роли
         </div>
-        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'firmovi'}" (click) = "openFirmovi()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'firmovi'}"
+            (click)="openFirmovi()">
             Фірмові суші
         </div>
-        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'maki'}" (click) = "openMaki()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'maki'}"
+            (click)="openMaki()">
             Роли Макі
         </div>
-        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'premium'}" (click) = "openPremium()">
+        <div class="menu-roli-punkts" [ngClass]="{'menu-roli-punkts-active': selectedPathPart === 'premium'}"
+            (click)="openPremium()">
             Преміум Суші
         </div>
     </div>
     <div class="menu" *ngIf="!isCategoryRoli()">
         <div class="card" *ngFor="let product of userProducts">
-            <img [routerLink]="[ '/product/'+product.category.path, product.id ]" [src]="product.imagePath"
+            <img [routerLink]="[ '/product/'+product.category.path, product.id ] " [src]="product.imagePath"
                 class="img-top" [alt]="product.name">
             <div>
                 <h5 [routerLink]="[ '/product/'+product.category.path, product.id ]" class="card-title">{{
                     product.name }}</h5>
                 <div class="item-card">
-                    <p *ngIf="product.category.path === 'sousi' || product.category.path === 'drinks' ; else otherPath" class="card-text"></p>
+                    <p *ngIf="product.category.path === 'sousi' || product.category.path === 'drinks' ; else otherPath"
+                        class="card-text"></p>
                     <ng-template #otherPath>
                         <p class="card-text">{{ product.description }}</p>
                     </ng-template>
                     <h4 class="card-weight">{{ product.weight }} г</h4>
                 </div>
                 <div class="bottom-item">
-                    <h4 class="card-price">{{ product.price }} грн</h4>
-                    <div class="manageCount" >
-                        <button type="button" class="btnMinus">-</button>
-                        <input class="countProduct" type="text" value="1" style="width: 40px;">
-                        <button type="button" class="btnAdd">+</button>
+                    <h4 class="card-price">{{ product.count === null ? product.price : product.price * product.count }} грн</h4>
+
+
+                    <div class="manageCount">
+                        <button type="button" (click)="productCount(product, false)" class="btnMinus">-</button>
+                        <input class="countProduct" type="text"
+                                [value]="product.count === null || product.count === 0 ? 1 : product.count" readonly
+                                style="width: 40px;">
+                        <button type="button" (click)="productCount(product, true)" class="btnAdd">+</button>
                     </div>
-                    <a class="btnOrder">Замовити</a>
+                    <button class="btnOrder" type="button" (click)="addToBasket(product)">Замовити</button>
                 </div>
             </div>
         </div>
@@ -67,13 +79,17 @@
                         <h4 class="card-weight">{{ product.weight }} г</h4>
                     </div>
                     <div class="bottom-item">
-                        <h4 class="card-price">{{ product.price }} грн</h4>
+                        <h4 class="card-price">{{ product.price * product.count}} грн</h4>
                         <div class="manageCount">
-                            <button type="button" class="btnMinus">-</button>
-                            <input class="countProduct" type="text" value="1" style="width: 40px;">
-                            <button type="button" class="btnAdd">+</button>
+                            <button type="button" (click)="productCount(product, false)" class="btnMinus">-</button>
+                            <input class="countProduct" type="text"
+                                [value]="product.count === null || product.count === 0 ? 1 : product.count" readonly
+                                style="width: 40px;">
+
+
+                            <button type="button" (click)="productCount(product, true)" class="btnAdd">+</button>
                         </div>
-                        <a class="btnOrder">Замовити</a>
+                        <button class="btnOrder" type="button" (click)="addToBasket(product)">Замовити</button>
                     </div>
                 </div>
             </div>
